--- a/1yy/web/conf/app.conf
+++ b/1yy/web/conf/app.conf
@@ -17,3 +17,9 @@ key_pairs = secret123
 
 [cache]
 default_expires = 600
+
+[mi]
+host = http://mvideo.duokanbox.com
+api = /api/a1
+key = x457_VKnEUiNinik5bQUnw==
+token = C8u617rK4WUQyyv1rZPT3B6gfDDndZudprPrRerZy6gUA=
